cabal-version:       2.4
name:                day14
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              yoshitsugu
maintainer:          yoshitsugu@sikmi.com
extra-source-files:  CHANGELOG.md

executable day14
  main-is:             Main.hs
  build-depends:       
      base ^>= 4.14.1.0
    , vector
    , bytestring
    , mtl
    , primitive
    , parsec
  default-language:    Haskell2010
