cabal-version:       2.4
name:                day16
version:             0.1.0.0
license:             MIT
license-file:        LICENSE
author:              yoshitsugu
maintainer:          yoshitsugu@sikmi.com
extra-source-files:  CHANGELOG.md

executable day18
  main-is:             Main.hs
  build-depends:       
      base ^>= 4.14.1.0
    , megaparsec
    , text
    , parser-combinators
    , unordered-containers
  default-language:    Haskell2010
