cabal-version:      2.4
name:               atcoder
version:            0.1.0.0
author:             yoshitsugu
maintainer:         yoshitsugu@sikmi.com
license:            MIT

executable abc006-b
    main-is:          abc006-b.hs
    build-depends:
        base ^>=4.14.1.0
      , bytestring
      , mtl
      , vector
    default-language: Haskell2010
    hs-source-dirs: src

executable abc006-c
    main-is:          abc006-c.hs
    build-depends:
        base ^>=4.14.1.0
      , bytestring
      , mtl
      , vector
    default-language: Haskell2010
    hs-source-dirs: src
