cabal-version:      2.4
name:               atcoder
version:            0.1.0.0
author:             yoshitsugu
maintainer:         yoshitsugu@sikmi.com
license:            MIT

executable abc009-b
    main-is:          abc009-b.hs
    build-depends:
        base ^>=4.15.0.0
      , bytestring
      , mtl
      , vector
      , containers
    default-language: Haskell2010
    hs-source-dirs: src

executable abc009-c
    main-is:          abc009-c.hs
    build-depends:
        base ^>=4.15.0.0
      , bytestring
      , mtl
      , vector
    default-language: Haskell2010
    hs-source-dirs: src
